tests/syntax_errors/extra_token_after_statement.draw
TEXT(160, 420, "DrawLang Demo") COLOR green SIZE 24 ;extra;